Minor code cleanups.